General improvements - feat(home): info typed like a typewriter - feat(home): added linkedin page - fix(footer): problems related to json load

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
     {{ if .Permalink }}
       <base href="{{ .Permalink }}">
     {{ end }}
-    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <title>{{ block "title" . }}{{ .Site.Params.Author }}{{ end }}</title>
 
     {{ if .Permalink }}
       <link rel="canonical" href="{{ .Permalink }}">
