--- a/themes/hugo-coder/assets/scss/_content_dark.scss
+++ b/themes/hugo-coder/assets/scss/_content_dark.scss
@@ -6,6 +6,7 @@
       ul {
         li {
           .title {
+            text-decoration: none;
             color: $fg-color-dark;
             &:hover,
             &:focus {
