--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -111,6 +111,10 @@
     {{ if and .Site.Params.fathomAnalytics .Site.Params.fathomAnalytics.siteID }}
       {{- partial "analytics/fathom" . -}}
     {{ end }}
+    
+    {{ if and .Site.Params.googleAnalytics .Site.Params.googleAnalytics.siteID }}
+      {{- partial "analytics/ga4" . -}}
+    {{ end }}
 
   </body>
 
