--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -1,17 +1,17 @@
 // Fonts
-$text-font-family: Merriweather, Georgia, serif;
+$text-font-family: Merriweather, Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
 $heading-font-family: Lato, Helvetica, sans-serif;
-$code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
+$code-font-family: 'Fira Code', 'Consolas', 'Courier New', monospace;
 
 // Colors
 $bg-color: #FAFAFA !default;
-$fg-color: #212121 !default;
+$fg-color: #1a1c20 !default;
 $alt-bg-color: #E0E0E0 !default;
 $alt-fg-color: #000 !default;
 $link-color: #1565c0 !default;
 
 // Colors dark
-$bg-color-dark: #212121 !default;
+$bg-color-dark: #1a1c20 !default;
 $fg-color-dark: #dadada !default;
 $alt-bg-color-dark: #424242 !default;
 $alt-fg-color-dark: #dadada !default;
